# clustering

./: .gitignore  README.md  casa.ipynb  clusterizacao_hierarquica_aglomerativa.ipynb  clusterizacao_k_means.ipynb  exercicio_3_cartao.ipynb  exercicio_4_regional.ipynb  exercicio_kmeans_anacor.ipynb  exercicio_pca_anacor.ipynb  pyproject.toml
