[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["Guilherme Canfield <guilherme.canfield87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pingouin = "^0.5.5"
openpyxl = "^3.1.5"
nbformat = "^5.0"
factor-analyzer = "^0.5.1"
prince = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
